--- a/templates/index.html
+++ b/templates/index.html
@@ -48,10 +48,62 @@
     input[type="submit"]:hover {
         background-color: #45a049;
     }
+    .form{
+        margin-right: 0px;
+    }
+
+    form {
+            display: flex;
+            flex-direction: column;
+            max-width: 300px;
+            margin: 0 auto;
+            padding: 20px;
+            background-color: #ffffff;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+
+        input[type="text"] {
+            margin-bottom: 10px;
+            padding: 10px;
+            font-size: 16px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            box-sizing: border-box;
+        }
+
+        input[type="submit"] {
+            background-color: #4caf50;
+            color: white;
+            padding: 12px;
+            border: none;
+            cursor: pointer;
+            font-size: 16px;
+            border-radius: 4px;
+        }
+
+        input[type="submit"]:hover {
+            background-color: #45a049;
+        }
+
+        h1{
+            text-align: center;
+        }
     </style>
 
     <div class="content">
         <h1> Task Master</h1>
+
+        <form class="form" action="/" method="POST">
+            <input type="text" name="content" id="content">
+            <input type="submit" value="Add Tasks">
+        </form>
+
+        {% if tasks|length < 1 %}
+
+        <h4 style="text-align: center;"> No any tasks  </h4>
+
+        {% else %}
 
         <table>
             <tr>
@@ -60,24 +112,24 @@
                 <th>Actions</th>
             </tr>
             {% for task in tasks %}
+
             <tr>
                 <td>{{ task.content }}</td>
                 <td>{{ task.date_created.strftime('%Y-%m-%d %H:%M:%S') }}</td>
                 <td>
-                    <a href="#">Delete</a>
+                    <a href="/delete/{{task.id}}">Delete</a>
                     <br>
-                    <a href="#">Update</a>
+                    <a href="/update/{{task.id}}">Update</a>
                 </td>
             </tr>
             {% endfor %}
         </table>
+
+        {% endif%}
         
         
 
-        <form action="/" method="POST">
-            <input type="text" name="content" id="content">
-            <input type="submit" value="Add Tasks">
-        </form>
+        
         
 
     </div>
